:bug: FIX: Correct overflow-y value in containers.css

--- a/assets/css/layout/containers.css
+++ b/assets/css/layout/containers.css
@@ -51,5 +51,5 @@ section {
   padding-left: var(--section-padding-x);
   padding-right: var(--section-padding-x);
   overflow-x: hidden;
-  overflow-y:;
+  overflow-y: hidden;
 }
